# minervaml

./: README.md  setup.cfg
extras/: anacondalog.txt
samples/: minervamldemo.py  minervamldemoall.py
src/minervaml/: eda.py  example.py  hello.py
src/minervaml.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
