[metadata]
name = minervaml
version = 0.0.1
author = Caio Moreno
author_email = caiomsouza@gmail.com
description = Minerval ML
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/caiomsouza/minervaml
project_urls =
    Bug Tracker = https://github.com/caiomsouza/minervaml/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src